<resources>
    <string name="app_name">MoviesAPP</string>
    <string name="name">Name</string>
    <string name="password">Password*123</string>
    <string name="user">Admin</string>
    <string name="ingresar">ingresar</string>
    <string name="error_login">Ingrese bien la Cuenta</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu Contraseña</string>
    <string name="ingrese_su_usuario">Ingrese su Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_pelicula">Nombre Pelicula</string>
    <string name="imagenpelicula">ImagenPelicula</string>
    <string name="empty_state_message">No se encontro registros</string>
    <string name="next">Siguientes</string>
    <string name="previus">Anteriores</string>
    <string name="title_home">Peliculas</string>
    <string name="title_dashboard">Detalles</string>
    <string name="title_notifications">Notifications</string>
    <string name="titulo_de_la_pelicula">Titulo de la Pelicula</string>
    <string name="_2022_05_20">2022-05-20</string>
    <string name="portada_de_la_pelicula">Portada de la Pelicula</string>
    <string name="titulo_original">Titulo Original</string>
    <string name="nombremovie">NombreMovie</string>
    <string name="lenguaje_original">Lenguaje Original</string>
    <string name="es">ES</string>
    <string name="apto_para_todos">Apto para todos</string>
    <string name="_2000">2000</string>
    <string name="puntaje">Puntaje:</string>
    <string name="_5_5_10">5.5/10</string>
    <string name="traduccion_del_detalle_de_la_pelicula">Traduccion del detalle de la pelicula</string>
    <string name="general">General</string>
    <string name="cargando">Cargando</string>
    <string name="no_traduce">No se puede traducir el Texto Obtenido</string>
    <string name="error_al_traducir">Error al Traducir</string>
</resources>